# oem-lightweight

./: eval_oem_lightweight.py  pyproject.toml
oem_lightweight/: config.py  evaluator.py  model.py
oem_lightweight/fasterseg_api/: model_seg.py  operations.py
oem_lightweight/sparsemask_api/: sparse_mask_eval_mode.py
